maven config + hibernate config

--- a/lol-team/pom.xml
+++ b/lol-team/pom.xml
@@ -3,6 +3,7 @@
   <groupId>lol.team</groupId>
   <artifactId>lol-team</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>war</packaging>
   
   <url>http://maven.apache.org</url>
 	<dependencies>
